tests/invalid_typecheck/test_tc_assign_to_proc.aphi
/*
Type-check error: Cannot assign to a procedure name.
Attempts to assign a value to 'helper' which is a procedure.
*/

procedure helper {
}

procedure main {
    helper = 5;
}
